# Toshokan

./: .gitignore  Cargo.toml  Justfile  Makefile  README.md  go.mod  go.sum  main.go
.github/workflows/: ci.yaml
assets/: demo.tape
lib/: main.go
lib/cli/: cli.go
lib/steam/: steam.go
lib/utils/: utils.go
pkg/cli/: cli.go
pkg/steam/: steam.go
pkg/tui/: details.tmpl  item.go  tui.go
pkg/util/: util.go  util_test.go
src/: cli.rs  lib.rs  main.go  main.rs  protondb.rs  steam.rs  tui.rs
src/cli/: cli.go
src/steam/: steam.go
src/util/: util.go  util_test.go
