[package]
name = "toshokan"
version = "1.0.0"
description = "Tool for interacting with your Steam library."
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "2"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
steamlocate = "2.0.0-alpha.0"
