[package]
name = "toshokan"
version = "1.1.0"
description = "Tool for interacting with your Steam library."
edition = "2021"
repository = "https://github.com/tryton-vanmeer/Toshokan"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "2"
reqwest = { version = "0", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
steamlocate = "2.0.0-alpha.0"

[profile.release]
strip = true
lto = true
